--- a/packages/shared-utils/package.json
+++ b/packages/shared-utils/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "@votelab/shared-utils",
-  "version": "0.0.1",
-  "private": true,
-  "main": "./src/index.ts",
-  "types": "./src/index.ts",
-  "scripts": {
-    "lint": "eslint .",
-    "test": "jest"
-  }
+    "name": "@votelab/shared-utils",
+    "version": "0.0.1",
+    "private": true,
+    "main": "./src/index.ts",
+    "types": "./src/index.ts",
+    "scripts": {
+        "lint": "eslint .",
+        "test": "jest",
+        "build": "tsc --project tsconfig.json",
+        "dev": "tsc --project tsconfig.json --watch"
+    }
 }
