--- a/apps/election-site/package.json
+++ b/apps/election-site/package.json
@@ -25,7 +25,7 @@
         "tailwind-merge": "^2.5.4",
         "tailwindcss-animate": "^1.0.7",
         "typescript": "^4.9.5",
-        "@votelab/shared-utils": "*",
+        "@votelab/shared-utils": "file:../../packages/shared-utils",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
