--- a/packages/shared-utils/package.json
+++ b/packages/shared-utils/package.json
@@ -2,12 +2,16 @@
     "name": "@votelab/shared-utils",
     "version": "0.0.1",
     "private": true,
-    "main": "./src/index.ts",
-    "types": "./src/index.ts",
+    "main": "./dist/index.js",
+    "module": "./dist/index.js",
+    "types": "./dist/index.d.ts",
+    "files": [
+        "dist"
+    ],
     "scripts": {
         "lint": "eslint .",
         "test": "jest",
-        "build": "tsc --project tsconfig.json",
+        "build": "tsc",
         "dev": "tsc --project tsconfig.json --watch"
     }
 }
