--- a/packages/shared-utils/package.json
+++ b/packages/shared-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@votelab/shared-utils",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "private": true,
   "main": "./dist/index.js",
   "module": "./dist/index.js",
@@ -13,5 +13,10 @@
     "test": "jest",
     "build": "tsc",
     "dev": "tsc --project tsconfig.json --watch"
+  },
+  "devDependencies": {
+    "jest": "^29.0.0",
+    "ts-jest": "^29.0.0",
+    "@types/jest": "^29.0.0"
   }
 }
