--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,7 +3,13 @@
   "version": "0.0.0",
   "type": "module",
   "private": true,
+  "main": "./src/index.ts",
+  "types": "./src/index.ts",
   "exports": {
+    ".": {
+      "import": "./src/index.ts",
+      "types": "./src/index.ts"
+    },
     "./button": "./src/button.tsx",
     "./card": "./src/card.tsx",
     "./code": "./src/code.tsx",
@@ -17,8 +23,7 @@
     "lint": "eslint . --max-warnings 0",
     "generate:component": "turbo gen react-component",
     "check-types": "tsc --noEmit",
-    "build": "tsup src/index.ts --dts --format esm,cjs",
-    "dev": "tsup src/index.ts --dts --format esm,cjs --watch"
+    "build": "tsup src/index.ts --dts --format esm,cjs"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
@@ -27,7 +32,7 @@
     "@types/node": "^20.11.24",
     "@types/react": "18.3.0",
     "@types/react-dom": "18.3.1",
-    "tsup": "^8.3.5",
+    "tsup": "^8.0.2",
     "typescript": "5.5.4"
   },
   "dependencies": {
