--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,11 +1,22 @@
 {
     "extends": "@repo/typescript-config/react-library.json",
     "compilerOptions": {
-      "moduleResolution": "node16",
-      "module": "node16",
-      "jsx": "react-jsx",
-      "outDir": "dist"
+        "moduleResolution": "node16",
+        "module": "node16",
+        "jsx": "react-jsx",
+        "outDir": "dist",
+        "baseUrl": ".",
+        "paths": {
+            "@/*": [
+                "./src/*"
+            ]
+        }
     },
-    "include": ["src"],
-    "exclude": ["node_modules", "dist"]
-  }
+    "include": [
+        "src"
+    ],
+    "exclude": [
+        "node_modules",
+        "dist"
+    ]
+}
