--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,21 +3,13 @@
   "version": "0.0.0",
   "type": "module",
   "private": true,
-  "main": "./src/index.ts",
-  "types": "./src/index.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js"
-    },
-    "./button": "./src/button.tsx",
-    "./card": "./src/card.tsx",
-    "./code": "./src/code.tsx",
-    "./input": "./src/input.tsx",
-    "./utils": "./src/lib/utils.ts",
-    "./components/button": "./src/components/ui/button.tsx",
-    "./components/card": "./src/components/ui/card.tsx",
-    "./components/input": "./src/components/ui/input.tsx"
+    }
   },
   "scripts": {
     "clean": "rm -rf dist .turbo",
