--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,14 +1,16 @@
 {
   "name": "@repo/ui",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "private": true,
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
       "import": "./dist/index.js"
+    },
+    "./components/card": {
+      "import": "./dist/components/card.js"
     }
   },
   "scripts": {
@@ -25,8 +27,9 @@
     "@types/node": "^20.11.24",
     "@types/react": "18.3.0",
     "@types/react-dom": "18.3.1",
+    "tsconfig-paths": "^4.2.0",
     "tsup": "^8.0.2",
-    "typescript": "5.5.4"
+    "typescript": "^5.7.2"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
