--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -9,8 +9,8 @@
     ".": {
       "import": "./dist/index.js"
     },
-    "./components/card": {
-      "import": "./dist/components/card.js"
+    "./components/ui/card": {
+      "import": "./dist/components/ui/card.js"
     }
   },
   "scripts": {
