--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,17 +1,24 @@
 {
   "name": "@repo/ui",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "private": true,
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
-    "./button": "./src/button.tsx",
-    "./card": "./src/card.tsx",
-    "./code": "./src/code.tsx"
+    ".": {
+      "import": "./dist/index.js"
+    },
+    "./components/ui/card": {
+      "import": "./dist/components/ui/card.js"
+    }
   },
   "scripts": {
+    "clean": "rm -rf dist .turbo",
     "lint": "eslint . --max-warnings 0",
     "generate:component": "turbo gen react-component",
-    "check-types": "tsc --noEmit"
+    "check-types": "tsc --noEmit",
+    "build": "tsup src/index.ts --dts --format esm"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
@@ -20,10 +27,16 @@
     "@types/node": "^20.11.24",
     "@types/react": "18.3.0",
     "@types/react-dom": "18.3.1",
-    "typescript": "5.5.4"
+    "tsconfig-paths": "^4.2.0",
+    "tsup": "^8.0.2",
+    "typescript": "^5.7.2"
   },
   "dependencies": {
-    "react": "19.0.0-rc-5c56b873-20241107",
-    "react-dom": "19.0.0-rc-5c56b873-20241107"
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.2.1"
   }
 }
