--- a/packages/shared-utils/package.json
+++ b/packages/shared-utils/package.json
@@ -10,13 +10,17 @@
   ],
   "scripts": {
     "lint": "eslint .",
-    "test": "jest",
+    "test": "jest --config jest.config.js",
     "build": "tsc",
     "dev": "tsc --project tsconfig.json --watch"
   },
   "devDependencies": {
-    "jest": "^29.0.0",
-    "ts-jest": "^29.0.0",
-    "@types/jest": "^29.0.0"
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.10.5",
+    "bs-logger": "^0.2.6",
+    "jest": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.3.3"
   }
 }
