--- a/apps/election-site/tsconfig.json
+++ b/apps/election-site/tsconfig.json
@@ -1,6 +1,7 @@
 {
+    "extends": "@repo/typescript-config/react-library.json",
     "compilerOptions": {
-        "target": "es5",
+        "target": "ESNext",
         "lib": [
             "dom",
             "dom.iterable",
@@ -12,12 +13,15 @@
         "forceConsistentCasingInFileNames": true,
         "noEmit": true,
         "esModuleInterop": true,
-        "module": "esnext",
-        "moduleResolution": "node",
+        "module": "ESNext",
+        "moduleResolution": "bundler",
         "resolveJsonModule": true,
         "isolatedModules": true,
         "jsx": "react-jsx",
         "incremental": true,
+        "types": [
+            "vite/client"
+        ],
         "baseUrl": ".",
         "paths": {
             "@/*": [
@@ -26,10 +30,13 @@
         }
     },
     "include": [
-        "next-env.d.ts",
-        "**/*.ts",
-        "**/*.tsx",
-        "../../packages/ui/src/components/ui/button.tsx"
+        "src/**/*.ts",
+        "src/**/*.tsx"
+    ],
+    "references": [
+        {
+            "path": "./tsconfig.node.json"
+        }
     ],
     "exclude": [
         "node_modules"
