--- a/packages/shared-utils/package.json
+++ b/packages/shared-utils/package.json
@@ -2,25 +2,23 @@
   "name": "@votelab/shared-utils",
   "version": "0.0.3",
   "private": true,
+  "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "scripts": {
     "lint": "eslint .",
-    "test": "jest --config jest.config.js",
+    "test": "jest",
     "build": "tsc",
     "dev": "tsc --project tsconfig.json --watch"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.11",
-    "@types/node": "^20.10.5",
-    "bs-logger": "^0.2.6",
-    "jest": "^29.7.0",
-    "jest-environment-node": "^29.7.0",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.3.3"
+    "vitest": "^1.0.0"
   }
 }
