--- a/apps/election-site/package.json
+++ b/apps/election-site/package.json
@@ -14,36 +14,31 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
-    "@types/jest": "^29.5.11",
     "@types/node": "^20.0.0",
     "@types/react": "^18.3.14",
     "@types/react-dom": "^18.3.2",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/coverage-v8": "^1.0.0",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.57.0",
     "eslint-config-next": "^13.5.0",
     "eslint-config-prettier": "^8.10.0",
-    "eslint-plugin-jest": "^27.6.0",
     "eslint-plugin-react": "^7.33.2",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^24.0.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "ts-jest": "^29.1.1",
     "typescript": "^5.3.3",
-    "vite": "^5.4.11"
-  },
-  "resolutions": {
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
-    "eslint-plugin-jest": "^27.6.0"
+    "vite": "^5.4.11",
+    "vitest": "^1.0.0"
   },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   }
 }
