--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "test": "turbo run test"
   },
   "devDependencies": {
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@vitejs/plugin-react": "^4.2.1",
     "prettier": "^3.2.5",
     "turbo": "^2.3.3",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "vite": "^5.1.4",
+    "vitest": "^1.3.1"
   },
   "engines": {
     "node": ">=18"
@@ -23,12 +28,6 @@
   ],
   "dependencies": {
     "@hello-pangea/dnd": "^17.0.0",
-    "ajv": "^6.12.6",
-    "css-box-model": "^1.2.1",
-    "eslint-plugin-jest": "^25.3.0",
-    "react-scripts": "^5.0.1",
-    "redux": "^5.0.1",
-    "tailwindcss-animate": "^1.0.7",
-    "web-vitals": "^4.2.4"
+    "tailwindcss-animate": "^1.0.7"
   }
 }
