--- a/packages/shared-utils/package.json
+++ b/packages/shared-utils/package.json
@@ -14,11 +14,16 @@
   },
   "scripts": {
     "lint": "eslint .",
-    "test": "jest",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
     "build": "tsc",
     "dev": "tsc --project tsconfig.json --watch"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.2",
+    "@vitejs/plugin-react": "^4.2.1",
+    "jsdom": "^24.0.0",
     "vitest": "^1.0.0"
   }
 }
