--- a/packages/shared-utils/tsconfig.json
+++ b/packages/shared-utils/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "target": "ES2020",
         "module": "ESNext",
-        "moduleResolution": "bundler",
+        "moduleResolution": "node16",
         "outDir": "./dist",
         "rootDir": "./src",
         "declaration": true,
