--- a/packages/shared-utils/tsconfig.json
+++ b/packages/shared-utils/tsconfig.json
@@ -1,15 +1,17 @@
 {
     "compilerOptions": {
         "target": "ES2020",
-        "module": "ESNext",
-        "moduleResolution": "node16",
+        "module": "Node16",
+        "moduleResolution": "Node16",
         "outDir": "./dist",
         "rootDir": "./src",
         "declaration": true,
         "strict": true,
         "esModuleInterop": true,
         "skipLibCheck": true,
-        "forceConsistentCasingInFileNames": true
+        "forceConsistentCasingInFileNames": true,
+        "allowJs": true,
+        "checkJs": true
     },
     "include": [
         "src/**/*"
