--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -3,6 +3,8 @@
     "compilerOptions": {
         "moduleResolution": "node16",
         "module": "node16",
+        "declaration": true,
+        "declarationDir": "./dist",
         "jsx": "react-jsx",
         "outDir": "dist",
         "baseUrl": ".",
