--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -7,6 +7,7 @@
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
+        "types": "./dist/index.d.ts",
       "import": "./dist/index.js"
     },
     "./components/ui/card": {
