--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "extends": "@repo/typescript-config/react-library.json",
     "compilerOptions": {
-        "moduleResolution": "node16",
-        "module": "node16",
+        "moduleResolution": "bundler",
+        "module": "ESNext",
         "declaration": true,
         "declarationDir": "./dist",
         "jsx": "react-jsx",
