--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -2,7 +2,9 @@
     "extends": "@repo/typescript-config/react-library.json",
     "compilerOptions": {
         "moduleResolution": "node16",
-        "module": "node16",
+        "module": "ESNext",
+        "declaration": true,
+        "declarationDir": "./dist",
         "jsx": "react-jsx",
         "outDir": "dist",
         "baseUrl": ".",
